tests/type_errors/optmap_type_mismatch.nos
# expect_error: type mismatch
main() = Some("hello").optMap(x => x + 1)
